chore: update package & switch to npm

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cache-manager-ioredis-yet",
+  "name": "@edosrecki/cache-manager-ioredis-yet",
   "authors": [
     {
       "name": "Matthijs Dabroek",
@@ -8,6 +8,10 @@
     {
       "name": "Juan Aguilar Santillana",
       "email": "mhpoin@gmail.com"
+    },
+    {
+      "name": "Dinko Osrecki",
+      "email": "dinko.osrecki@gmail.com"
     }
   ],
   "description": "Redis store for node-cache-manager updated",
@@ -17,7 +21,7 @@
   "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/node-cache-manager/node-cache-manager-ioredis-yet.git"
+    "url": "https://github.com/edosrecki/node-cache-manager-ioredis-yet.git"
   },
   "keywords": [
     "cache-manager",
@@ -28,10 +32,10 @@
   "scripts": {
     "build": "rm -rf dist && tsc -p tsconfig.build.json",
     "test:watch": "vitest test.ts",
-    "test": "pnpm test:watch --run",
-    "release": "pnpm check && pnpm test && pnpm build && dotenv release-it",
-    "fix": "pnpm lint && pnpm fmt",
-    "check": "pnpm lint:check && pnpm fmt:check",
+    "test": "npm run test:watch --run",
+    "release": "npm run check && npm test && npm run build && dotenv release-it",
+    "fix": "npm run lint && npm run fmt",
+    "check": "npm run lint:check && npm run fmt:check",
     "lint": "eslint --cache --fix '**/*.{ts,js}'",
     "fmt": "prettier --write '**/*.{md,prisma,json}'",
     "lint:check": "eslint --cache --max-warnings 0 '**/*.{ts,js}'",
