--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,51 +4,38 @@ on:
 
 jobs:
   test:
+    name: Test
     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v3
-      - name: Build the stack
-        run: docker-compose up -d
+    services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
 
-      - name: Checkout
+    steps:
+      - name: 📂 Checkout code
         uses: actions/checkout@v3
 
-      - name: Install Node.js
+      - name: 💚 Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: lts/*
+          node-version-file: .nvmrc
+          cache: npm
 
-      - uses: pnpm/action-setup@v2.2.4
-        name: Install pnpm
-        id: pnpm-install
-        with:
-          version: 7
-          run_install: false
+      - name: 📦 Install dependencies
+        run: npm ci
 
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        run: |
-          echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
+      - name: 🔎 Check code
+        run: npm run check
 
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
-        with:
-          path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+      - name: 🧰 Build code
+        run: npm run build
 
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: check
-        run: pnpm check
-
-      - name: test
-        run: pnpm test -- --coverage
-
-      - name: Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+      - name: 🧪 Test code
+        run: npm test
