--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm ci
 
       - name: 🔎 Check code
-        run: npm check
+        run: npm run check
 
       - name: 🧰 Build code
         run: npm run build
