--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/edosrecki/node-cache-manager-ioredis.git"
